# solidity_smart_contract_example

./: .gitignore  Cargo.toml  README.MD
client/: Cargo.toml  MessageStorage.abi  smart_contract.sol  smart_contrat.sol
client/src/: balance.rs  check_wallet_balance.rs  config.rs  create.rs  deploy.rs  errors.rs  init.rs  load_wallet.rs  main.rs  read.rs  store.rs  transfer.rs
common/: Cargo.toml
common/src/: MessageStorage.abi  balance.rs  config.rs  contract.rs  deploy.rs  error.rs  init_log.rs  lib.rs  provider.rs  read.rs  retrieve.rs  store.rs  transaction_params.rs  transfer.rs
docs/: README.MD
server/: Cargo.toml
server/src/: deploy.rs  handler.rs  hello.rs  main.rs  retrieve.rs  state.rs  store.rs
server/src/handler/: balance.rs  deploy.rs  hello.rs  read.rs  retrieve.rs  store.rs  transaction_params.rs  transfer.rs
