[workspace]
members = [
    "common",
    "client",
    "server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Yuriy Larin <yuriy.larin@gmail.com>"]
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.12"
axum = "0.8.3"
axum-macros = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
http = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
alloy = { version = "0.15", features = ["full"] }
alloy-primitives = { version = "1.1.0", features = ["rand"] }
clap = "4.5"
reqwest = "0.12.15"
rand = "0.9"
hex = "0.4"
