[package]
name = "common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Common components for client and server"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
http.workspace = true
url.workspace = true
