[package]
name = "server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Axum server"

[dependencies]
common = { path = "../common" }
thiserror.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
tokio.workspace = true
axum-macros.workspace = true
